--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,7 @@
 {
-  "short_name": "Amit's Portfolio",
-  "name": "Amit's Portfolio",
+  "short_name": "TPRC",
+  "name": "The Phone Repair Cafe",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
@@ -19,7 +14,8 @@
     }
   ],
   "start_url": ".",
-  "display": "standalone",
+//  "theme_color": "#ffffff",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "display": "standalone"
 }
